// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI Standard command: auth-token 1`] = `
[
  [
    "auth-token",
  ],
  {
    "callback": undefined,
    "help": undefined,
    "pkg": undefined,
  },
]
`;

exports[`CLI Standard command: auth-token 2`] = `
[
  [
    "auth-token",
    "arg",
  ],
  {
    "callback": undefined,
    "help": undefined,
    "pkg": undefined,
  },
]
`;

exports[`CLI Standard command: library 1`] = `
[
  [
    "library",
  ],
  {
    "callback": undefined,
    "help": undefined,
    "pkg": undefined,
  },
]
`;

exports[`CLI Standard command: library 2`] = `
[
  [
    "library",
    "arg",
  ],
  {
    "callback": undefined,
    "help": undefined,
    "pkg": undefined,
  },
]
`;
